--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ ipykernel = "^6.23.1"
 pydot = "^1.4.2"
 tiktoken = "^0.4.0"
 colorama = "^0.4.6"
+pygame = "^2.5.0"
+pygame-textinput = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pandas = "^2.0.2"
